added custom toolbar

--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -4,19 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.InfoFragment">
+    tools:context=".ui.infoFragment.InfoFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <include
+        android:id="@+id/infoToolbar"
+        layout="@layout/app_bar_layout" />
+
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="108dp"
+        android:layout_marginTop="36dp"
         android:text="Acerca de la aplicación :D"
         android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/infoToolbar" />
 
     <ImageView
         android:id="@+id/imageView"
