fixed toolbar when coming back from other screen

--- a/app/src/main/res/layout/fragment_post_list.xml
+++ b/app/src/main/res/layout/fragment_post_list.xml
@@ -8,7 +8,7 @@
 
 
     <include
-        android:id="@+id/toolbar"
+        android:id="@+id/myToolbar"
         layout="@layout/app_bar_layout" />
 
     <TextView
@@ -20,7 +20,7 @@
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/myToolbar" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_posts"
